--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
                         <th>Last Name</th>
                         <th>Age</th>
                     </tr>
-                    <form action="http://localhost/cgi-bin/new_script.cgi/add" method="POST">
+                    <form action="http://localhost/cgi-bin/main.cgi/add" method="POST">
                     <tr>
                         <td style="border: none;"></td>
                         <td style="border: none;"><input type="text" name="p"></td>
                         <td style="border: none;"><input type="text" name="p"></td>
                         <td style="border: none;"><input type="text" name="p"></td>
+                        <td style="border: none;"><input type="submit" value="Del"></td>
                     </tr>
                     <tr>
                         <td style="border: none;"></td>
